fix(styling): update html overflow set to hidden

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,11 +5,17 @@
 }
 html {
   font-family: "Montserrat", sans-serif;
+  margin: 0px auto;
+  width: 100%;
+  overflow-x: hidden;
 }
 body {
   background: #eee;
-  padding: 0 16px;
+
+
 }
+
+
 
 header {
   background-color: #0278ae;
@@ -33,7 +39,7 @@ footer {
 }
 
 footer p {
-  color: #ccc;
+  color: #000000;
 }
 .note {
   background: #fff;
